--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
               <div class="form-control">
                   <label for="password">Password</label>
-                  <input type="password" placeholder="Password" id="password">
+                  <input type="password" placeholder="Password" id="password" maxlength="16">
                   <i class="fas fa-check-circle"></i>
                   <i class="fas fa-exclamation-circle"></i>
                   <small>Error Message</small>
@@ -41,7 +41,7 @@
 
               <div class="form-control">
                   <label for="password-check">Password Check</label>
-                  <input type="password" placeholder="Password Check" id="password-check">
+                  <input type="password" placeholder="Password Check" id="password-check" maxlength="16">
                   <i class="fas fa-check-circle"></i>
                   <i class="fas fa-exclamation-circle"></i>
                   <small>Error Message</small>
